--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "@ngrx/effects": "18.0.1",
     "@ngrx/entity": "18.0.1",
     "@ngrx/router-store": "18.0.1",
-    "@ngrx/store": "18.0.1",
+    "@ngrx/signals": "^18.0.2",
+    "@ngrx/store": "^18.0.1",
     "@nx/angular": "19.5.0",
     "@swc/helpers": "0.5.12",
     "@tanstack/angular-query-experimental": "^5.12.1",
@@ -53,6 +54,7 @@
     "@commitlint/config-conventional": "^17.2.0",
     "@cypress/webpack-dev-server": "3.8.0",
     "@hirez_io/observer-spy": "^2.2.0",
+    "@ngrx/eslint-plugin": "^18.0.1",
     "@ngrx/schematics": "18.0.1",
     "@nx/cypress": "19.5.0",
     "@nx/devkit": "19.5.0",
